Sculpt - smear brush crash #78242

Closed
opened 2020-06-25 08:58:46 +02:00 by Ignatz · 6 comments

System Information
Operating system: Windows 7 Pro 64-bit
Graphics card: Nvida GeForce GTX 1060 6gig

Blender Version
Broken: 2.90.0 Alpha - Date: 2020-06-24 - Hash ec776f18ff
Worked: NA

Short description of error

  • Start Blender
  • Switch to sculpt mode
  • Pull toolbar to the right to show in double columns
  • Select Smear brush
  • Place cursor over object and press left mouse button
  • Instant Crash to desktop

More information:
This crash does not happen if one does not pull the toolbar to show it in double columns

Personal Note: The name of the smear brush is not correct. The effect it produces would more correctly be termed BLUR

**System Information** Operating system: Windows 7 Pro 64-bit Graphics card: Nvida GeForce GTX 1060 6gig **Blender Version** Broken: 2.90.0 Alpha - Date: 2020-06-24 - Hash ec776f18ff70 Worked: NA **Short description of error** - Start Blender - Switch to sculpt mode - Pull toolbar to the right to show in double columns - Select Smear brush - Place cursor over object and press left mouse button - Instant Crash to desktop More information: This crash does not happen if one does not pull the toolbar to show it in double columns Personal Note: The name of the smear brush is not correct. The effect it produces would more correctly be termed **BLUR**
Author

Added subscriber: @ignatz

Added subscriber: @ignatz

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

ss->pmap is NULL.

sculpt_vertex_neighbors_get_faces(SculptSession * ss, int index, SculptVertexNeighborIter * iter) Line 641	C
SCULPT_vertex_neighbors_get(SculptSession * ss, const int index, const bool include_duplicates, SculptVertexNeighborIter * iter) Line 697	C
do_smear_brush_task_cb_exec(void * userdata, const int n, const TaskParallelTLS * tls) Line 388	C
BLI_task_parallel_range(const int start, const int stop, void * userdata, void(*)(void *, const int, const TaskParallelTLS *) func, const TaskParallelSettings * settings) Line 141	C++
SCULPT_do_smear_brush(Sculpt * sd, Object * ob, PBVHNode * * nodes, int totnode) Line 471	C
do_brush_action(Sculpt * sd, Object * ob, Brush * brush, UnifiedPaintSettings * ups) Line 5538	C
do_tiled(Sculpt * sd, Object * ob, Brush * brush, UnifiedPaintSettings * ups, void(*)(Sculpt *, Object *, Brush *, UnifiedPaintSettings *) action) Line 5873	C
do_symmetrical_brush_actions(Sculpt * sd, Object * ob, void(*)(Sculpt *, Object *, Brush *, UnifiedPaintSettings *) action, UnifiedPaintSettings * ups) Line 5952	C
sculpt_stroke_update_step(bContext * C, PaintStroke * UNUSED_stroke, PointerRNA * itemptr) Line 7213	C
paint_brush_stroke_add_step(bContext * C, wmOperator * op, const float * mouse_in, float pressure) Line 622	C
paint_stroke_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 1497	C
sculpt_brush_stroke_invoke(bContext * C, wmOperator * op, const wmEvent * event) Line 7348	C
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1284	C
wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2116	C
wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2426	C
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2727	C
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2854	C
wm_event_do_handlers(bContext * C) Line 3357	C
WM_main(bContext * C) Line 478	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 534	C
`ss->pmap` is `NULL`. ``` sculpt_vertex_neighbors_get_faces(SculptSession * ss, int index, SculptVertexNeighborIter * iter) Line 641 C SCULPT_vertex_neighbors_get(SculptSession * ss, const int index, const bool include_duplicates, SculptVertexNeighborIter * iter) Line 697 C do_smear_brush_task_cb_exec(void * userdata, const int n, const TaskParallelTLS * tls) Line 388 C BLI_task_parallel_range(const int start, const int stop, void * userdata, void(*)(void *, const int, const TaskParallelTLS *) func, const TaskParallelSettings * settings) Line 141 C++ SCULPT_do_smear_brush(Sculpt * sd, Object * ob, PBVHNode * * nodes, int totnode) Line 471 C do_brush_action(Sculpt * sd, Object * ob, Brush * brush, UnifiedPaintSettings * ups) Line 5538 C do_tiled(Sculpt * sd, Object * ob, Brush * brush, UnifiedPaintSettings * ups, void(*)(Sculpt *, Object *, Brush *, UnifiedPaintSettings *) action) Line 5873 C do_symmetrical_brush_actions(Sculpt * sd, Object * ob, void(*)(Sculpt *, Object *, Brush *, UnifiedPaintSettings *) action, UnifiedPaintSettings * ups) Line 5952 C sculpt_stroke_update_step(bContext * C, PaintStroke * UNUSED_stroke, PointerRNA * itemptr) Line 7213 C paint_brush_stroke_add_step(bContext * C, wmOperator * op, const float * mouse_in, float pressure) Line 622 C paint_stroke_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 1497 C sculpt_brush_stroke_invoke(bContext * C, wmOperator * op, const wmEvent * event) Line 7348 C wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1284 C wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2116 C wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2426 C wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2727 C wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2854 C wm_event_do_handlers(bContext * C) Line 3357 C WM_main(bContext * C) Line 478 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 534 C ```

This issue was referenced by 4f3233dd53

This issue was referenced by 4f3233dd536e8839c304dd34cd8aec89bfd8ca34
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-07-27 22:01:41 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78242
No description provided.